Fleshing out lede item.

--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -1,19 +1,27 @@
 # Let's make a deal.
-## Crypto world just saw a surprising flurry of dealmaking on Wall Street. What's going on here?
+## On Wall Street, merger and acquisition activity is heating up among crypto companies. What's going on?
 
 <p><em>By Peter A. McKay</em></p>
 
-**Dealmaking is taking off among crypto companies.** My hunch is that this represents a mixed blessing, for reasons I'll describe further on. But first let's cover some details:
+**Dealmaking is taking off in the crypto space.** My hunch is this represents a mixed blessing, for reasons I'll describe further on. But first let's cover some details:
 
-- Robinhood: https://www.reuters.com/markets/deals/robinhood-bets-big-crypto-with-200-million-deal-bitstamp-2024-06-06/ | https://fortune.com/crypto/2024/06/06/robinhood-bitstamp-crypto-deal-200million/ | https://fortune.com/crypto/2024/06/06/robinhood-crypto-bitstamp-sec-warning/ | https://www.wsj.com/business/deals/robinhood-doubles-down-on-crypto-with-deal-for-bitstamp-eade3276
+- **Robinhood bought** the crypto exchange Bitstamp for $200 million Thursday. The acquisition effectively moves Robinhood into closer competition with Coinbase and Binance. It also deepens Robinhood's footprint in crypto despite recent warnings from U.S. regulators about how it has operated its existing digital-assets business. ([Wall Street Journal](https://www.wsj.com/business/deals/robinhood-doubles-down-on-crypto-with-deal-for-bitstamp-eade3276?st=uhtwi5ejno9s5n9&reflink=desktopwebshare_permalink))
 
-- Baakt may sell itself off. https://www.bloomberg.com/news/articles/2024-06-07/crypto-marketplace-bakkt-said-to-weigh-potential-sale-breakup
+- **Bloomberg News reports** that the publicly listed trading platform Bakkt [is exploring](https://finance.yahoo.com/news/crypto-marketplace-bakkt-weighs-potential-155913253.html) a potential sale or breakup. Bakkt, which launched in 2018, is majority-owned by Intercontinental Exchange, operator of the New York Stock Exchange.
 
-- https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round
+- **Bloomberg also says** the exchange Kraken is [pursuing a new funding round](https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round) of more than $100 million by year end, with an eye toward doing an initial public offering later.  https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round
 
-- https://www.reuters.com/technology/deutsche-bank-ties-up-with-bitpanda-cautious-crypto-shift-2024-06-04/
+- **Deutsche Bank said** it will work with Vienna-based broker Bitpanda to process customer deposits and withdrawals. ([Reuters](https://www.reuters.com/technology/deutsche-bank-ties-up-with-bitpanda-cautious-crypto-shift-2024-06-04/))
 
-<!-- Transition: Good news is there's still smart money and innovation going on in blockchain, despite negative or nonexistant PR, long shadow of AI, etc. Bad news is many of these deals are a form of centralization, perhaps akin to formation of oligarchies that dominate web2. -->
+**Why it matters:** For the crypto industry, it's welcome news at this point that there is still "smart money" jockeying for position amongst its ranks. That's important validation considering retail investors' appetite for crypto is still [well below](https://www.reuters.com/technology/cryptoverse-retail-traders-sit-out-bitcoin-rally-2024-05-14/) its fevered pre-FTX levels, and artificial intelligence has been stealing some of crypto's PR shine lately.  
+
+For anyone who cares about the broader principle of decentralization, though, I think there are also some risks inherent to the current wave of dealmaking.
+
+Remember, the tokenized economy (aka web3) is built primarily upon [two networks](https://peteramckay.medium.com/public-blockchains-rock-afff96e35919) that are fully transparent and open source by design. But the companies and services that sit atop those networks often aren't.
+
+If they then further consolidate, we could end up neatly replicating the sins of web1 and web2, in which massive companies use proprietary software to act as chokepoints on what was intended to be a more egalitarian internet.
+
+I don't think we're at that point quite yet, or that such a fate is inevitable. But we should definitely guard against it while we still can.
 
 ### Week in Review: June 2-8, 2024
 
