Finalizing lede and news summary

--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -25,31 +25,19 @@ I don't think we're at that point quite yet, or that such a fate is inevitable. 
 
 ### Week in Review: June 2-8, 2024
 
-- New .blockchain TLD. https://cointelegraph.com/news/unstoppable-domains-blockchain-web3-domain-launch
+- **The New York Times** tech reporters Kashmir Hill and Tiffany Hsu (who are definitely real people) chronicled the [rise and fall](https://www.nytimes.com/2024/06/06/technology/bnn-breaking-ai-generated-news.html) of BNN Breaking, an AI-enabled "news" organization whose work was chock full of fabrications and errors. Yet it managed to garner millions of readers and get its stories linked on MSN.com and other major sites. Yikes.
 
-- Nuklai's HelixVM Launch to Fuel the Next Wave of AI <!-- Pickup from email-->
+- **The U.S. added 600,000 new millionaires** in 2023, many of them minted by the AI boom. ([CNBC](https://www.cnbc.com/2024/06/07/us-millionaire-population.html))
 
-- Base update: Coinbase's Jesse Pollack tells Bloomberg there's no plan for a Base token. <!-- Holy crap, I love this. Need link to the video... --> | https://www.theblock.co/post/299173/friendtech-to-move-to-new-friendchain-blockchain-in-move-away-from-base
+- **Decentralized social network FriendTech** announced it will migrate from Coinbase’s Layer-2 blockchain Base to a proprietary Friendchain network built in partnership with infrastructure provider Conduit. ([The Block](https://www.theblock.co/post/299173/friendtech-to-move-to-new-friendchain-blockchain-in-move-away-from-base))
 
-- https://www.nytimes.com/2024/06/06/technology/bnn-breaking-ai-generated-news.html
+- **Nuklai,** which is building a new data-focused layer-1 chain, [announced](https://x.com/NuklaiData/status/1796904653075943551) it has launched a new testnet, dubbed HelixVM. If you're a developer interested in building an application on it, fill out [this form](https://docs.google.com/forms/d/e/1FAIpQLSdI-QuOpuNMZiSzRHc1VERrpvnM4F2vEAorbexJbr9luDGGJw/viewform) to notify the Nuklai team.
 
-- OpenAI whistleblower interviewed by NYT: https://www.nytimes.com/2024/06/04/technology/openai-culture-whistleblowers.html
-
-- https://www.coindesk.com/markets/2024/06/07/gamestop-tumbles-40-as-trading-icon-roaring-kitty-returns-to-livestream/ | Who is Keith Gill? https://www.wsj.com/finance/stocks/who-is-keith-gill-the-meme-lord-is-back-c208be91?st=u3bbvzxogcx9o4f&reflink=desktopwebshare_permalink
-
-- Macro update. BOC and ECB rate cuts, US jobs data.  BOC and ECB cut rates. https://www.theblock.co/post/299114/arthur-hayes-says-crypto-bull-market-is-reawakening-amid-boc-and-ecb-rate-cuts | https://www.theblock.co/post/299095/bitcoin-rebounds-from-drop-with-equity-indices-as-strong-us-jobs-data-poses-challenge-to-fed-rate | https://www.theblock.co/post/299095/bitcoin-rebounds-from-drop-with-equity-indices-as-strong-us-jobs-data-poses-challenge-to-fed-rate
-
-- Washington Watch: Trump says he wants to be the "crypto president." <!-- Need link --> May jobs report better than expected. <!-- TKTKTK --> | https://www.reuters.com/technology/us-crypto-advocacy-group-tops-1-million-members-after-biden-veto-2024-06-06/
-
-- Tienanmen anniversary: https://wsjchina.cmail20.com/t/d-e-etuduit-drjjjyiym-r/ | Twitter share: https://x.com/Lingling_Wei/status/1797978553109373119 | NYT says China's internet is "disappearing" due to censorship. https://www.nytimes.com/2024/06/04/business/china-internet-censorship.html
-
-- Craig Wright ordered to pay plaintiffs' legal bills: https://www.coindesk.com/policy/2024/06/07/copa-seeks-payment-of-85-of-costs-in-craig-wright-case/
-
-- https://www.cnbc.com/2024/06/07/us-millionaire-population.html
-
-### Odds & Ends
+- **Unstoppable Domains and Blockchain.com** have partnered to register a new .blockchain domain with ICANN, the body that governs web addresses and naming globally. The new .blockchain site addresses are expected to be available by the second quarter of 2026. ([Cointelegraph](https://cointelegraph.com/news/unstoppable-domains-blockchain-web3-domain-launch))
 
 - **Galaxy Digital announced** it has [tokenized](https://www.galaxy.com/newsroom/galaxy-announces-tokenization-of-the-1708-stradivarius-violin-empress/) a 316-year-old Stradivarius violin.
+
+### Odds & Ends
 
 - **Apollo-era astronaut William Anders** died at the age of 90 in a plane crash [northwest of Seattle](https://www.salon.com/2024/06/07/apollo-8-astronaut-captured-earthrise-photo-dies-in-plane-crash/?in_brief=true). A U.S. Air Force veteran, Anders famously became the first person to orbit the moon, in 1968. During that mission, he snapped the iconic [Earthrise](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/NASA-Apollo8-Dec24-Earthrise.jpg/1920px-NASA-Apollo8-Dec24-Earthrise.jpg) photo that has since become a powerful symbol of mankind's exploration of space.
 
