--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -9,7 +9,7 @@
 
 - **Bloomberg News reports** that the publicly listed trading platform Bakkt [is exploring](https://finance.yahoo.com/news/crypto-marketplace-bakkt-weighs-potential-155913253.html) a potential sale or breakup. Bakkt, which launched in 2018, is majority-owned by Intercontinental Exchange, operator of the New York Stock Exchange.
 
-- **Bloomberg also says** the exchange Kraken is [pursuing a new funding round](https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round) of more than $100 million by year end, with an eye toward doing an initial public offering later.  https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round
+- **Bloomberg also says** the exchange Kraken is [pursuing a new funding round](https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round) of more than $100 million by year end, with an eye toward doing an initial public offering later.
 
 - **Deutsche Bank said** it will work with Vienna-based broker Bitpanda to process customer deposits and withdrawals. ([Reuters](https://www.reuters.com/technology/deutsche-bank-ties-up-with-bitpanda-cautious-crypto-shift-2024-06-04/))
 
@@ -21,7 +21,7 @@ Remember, the tokenized economy (aka web3) is built primarily upon [two networks
 
 If they then further consolidate, we could end up neatly replicating the sins of web1 and web2, in which massive companies use proprietary software to act as chokepoints on what was intended to be a more egalitarian internet.
 
-I don't think we're at that point quite yet, or that such a fate is inevitable. But we should definitely guard against it while we still can.
+I don't think we're at that point quite yet with web3, or that such a fate is inevitable. But we should definitely guard against it while we still can.
 
 ### Week in Review: June 2-8, 2024
 
@@ -41,7 +41,7 @@ I don't think we're at that point quite yet, or that such a fate is inevitable. 
 
 - **Apollo-era astronaut William Anders** died at the age of 90 in a plane crash [northwest of Seattle](https://www.salon.com/2024/06/07/apollo-8-astronaut-captured-earthrise-photo-dies-in-plane-crash/?in_brief=true). A U.S. Air Force veteran, Anders famously became the first person to orbit the moon, in 1968. During that mission, he snapped the iconic [Earthrise](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/NASA-Apollo8-Dec24-Earthrise.jpg/1920px-NASA-Apollo8-Dec24-Earthrise.jpg) photo that has since become a powerful symbol of mankind's exploration of space.
 
-- **Serious question:** People who use and/or rave about the awesomeness of Apple's AirPod earbuds... How do you not lose them on a weekly basis? I know they've been out for years now, and I will confess I still don't get it. Seems like a massive scam to me. 🤷
+- **Serious question:** People who use and/or rave about the awesomeness of Apple's AirPod earbuds... How do you not lose them on a weekly basis? I know they've been out for years now, but I will confess I still don't get it. Seems like a massive scam to me. 🤷
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
