--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -11,17 +11,17 @@
 
 - **Bloomberg also says** the exchange Kraken is [pursuing a new funding round](https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round) of more than $100 million by year end, with an eye toward doing an initial public offering later.
 
-- **Deutsche Bank said** it will work with Vienna-based broker Bitpanda to process customer deposits and withdrawals. ([Reuters](https://www.reuters.com/technology/deutsche-bank-ties-up-with-bitpanda-cautious-crypto-shift-2024-06-04/))
+- **Deutsche Bank said** it will work with Vienna-based broker Bitpanda to process customer deposits and withdrawals. Getting such a large banking partner is significant for Bitpanda at a time when some crypto asset managers have had trouble accessing such services due to rising regulatory worries. ([Reuters](https://www.reuters.com/technology/deutsche-bank-ties-up-with-bitpanda-cautious-crypto-shift-2024-06-04/))
 
-**Why it matters:** For the crypto industry, it's welcome news at this point that there is still "smart money" jockeying for position amongst its ranks. That's important validation considering retail investors' appetite for crypto is still [well below](https://www.reuters.com/technology/cryptoverse-retail-traders-sit-out-bitcoin-rally-2024-05-14/) its fevered pre-FTX levels, and artificial intelligence has been stealing some of crypto's PR shine lately.  
+**Why all this matters:** For the crypto industry, it's welcome news at this point that there is still "smart money" in the conventional finance space jockeying for position amongst its ranks. That's important validation considering retail investors' appetite for crypto is still [well below](https://www.reuters.com/technology/cryptoverse-retail-traders-sit-out-bitcoin-rally-2024-05-14/) its fevered pre-FTX levels, and artificial intelligence has been stealing some of crypto's PR shine lately.  
 
 For anyone who cares about the broader principle of decentralization, though, I think there are also some risks inherent to the current wave of dealmaking.
 
 Remember, the tokenized economy (aka web3) is built primarily upon [two networks](https://peteramckay.medium.com/public-blockchains-rock-afff96e35919) that are fully transparent and open source by design. But the companies and services that sit atop those networks often aren't.
 
-If they then further consolidate, we could end up neatly replicating the sins of web1 and web2, in which massive companies use proprietary software to act as chokepoints on what was intended to be a more egalitarian internet.
+If those companies then further consolidate, we could end up neatly replicating the sins of web1 and web2, in which massive companies use proprietary software to act as choke points on what was intended to be a more egalitarian internet.
 
-I don't think we're at that point quite yet with web3, or that such a fate is inevitable. But we should definitely guard against it while we still can.
+I don't think we're at that point quite yet with web3, or that such a fate is inevitable. But we should definitely guard against it while it's still early days.
 
 ### Week in Review: June 2-8, 2024
 
