minor tweak to lede item

--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -21,7 +21,7 @@ Remember, the tokenized economy (aka web3) is built primarily upon [two networks
 
 If those companies then further consolidate, we could end up neatly replicating the sins of web1 and web2, in which massive companies use proprietary software to act as choke points on what was intended to be a more egalitarian internet.
 
-I don't think we're at that point quite yet with web3, or that such a fate is inevitable. But we should definitely guard against it while it's still early days.
+I don't think we're at that point quite yet with web3, or that such a fate is inevitable. But we should definitely guard against it while we're still in early days.
 
 ### Week in Review: June 2-8, 2024
 
