Updating June, July drafts

--- a/2024/2024-06-16.md
+++ b/2024/2024-06-16.md
@@ -1,40 +1,59 @@
-# tktktk
-## tktktk
+# For once, a kind word about Google
+## Let's pause the Big Tech hateration a moment to give the humble Chromebook some well-deserved props.
 
-<!--
+![People using a Chromebook](https://mcusercontent.com/cb5b2262972b0cb6543967aa9/images/62757c5d-ef34-4e9f-b255-1eef381861a3.jpg)
+_Photo by_ [_Brooke Cagle_](https://unsplash.com/@brookecagle?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash) _via_ [_Unsplash_](https://unsplash.com/photos/person-using-laptop-C-v1p2DTakA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash)
 
-Need to do some housekeeping before distributing this week's newsletter:
 
--- Syndicate last #w3w to personal blog...
--- Migrate MailChimp list -> Substack.
--- Write wrapup documentation for DaVinci.
+_By_ [_Peter A. McKay_](https://pmckay.com)
 
--->
+**My laptop died** **on Tuesday.** In the aftermath, I’ve found myself doing something that has frankly surprised me.
 
-![A blank billboard](https://blog.pmckay.com/img/billboard-3840.jpg)
-*Illustration based on photo by Maria Kray via Pixabay*
+I’m switching to a daily setup that divides the old functions of my laptop between a desktop PC and… _a Chromebook?!?!?_
 
-<p><em>By Peter A. McKay</em></p>
+I mention this precisely because I’m usually [pretty hard](https://medium.com/the-modern-scientist/big-tech-is-shrinking-good-3b00ba8487b2) on [Big Tech](https://medium.com/@peteramckay/why-is-big-tech-frosty-on-blockchain-96aeb67600ac) in this newsletter. And I expect to be so in the future, frankly.
 
-<!-- Lede item. Should run ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in. -->
+All the more reason to pause a moment and, in all fairness, give Google some well-deserved (and definitely unsolicited) props for what I believe are the very real strengths of the Chromebook product line.
 
-### Week in Review: June 9-15, 2024
+The most obvious one, which Google itself has often touted, is affordability. As a computing option that starts [under $100](https://duckduckgo.com/?q=low+end+chromebooks&t=brave&ia=web), Chromebooks definitely have had a role in democratizing access to the internet. This is no small accomplishment on behalf of the general public, even if it’s perhaps easy for more technical users to discount.
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+The other biggie, which _should_ be easier for geeks to grasp, is that Chromebooks run on ChromeOS, which is a customized distribution (or “distro” in IT lingo) of the open-source Linux operating system. On some Chromebooks, there are even options in the settings to enable a Linux command-line interface. Or if you prefer, you can hack Chromebooks to install other distros of Linux you want, as the hardware is Linux-compatible by definition.
 
-- tk
-- tk
+In other words, Chromebooks could be viewed a huge win for popularizing Linux, which has always struggled to gain adoption as a daily driver among desktop users. If you’re a big Linux aficionado, as I [definitely am](https://www.linkedin.com/pulse/linux-my-ecosystem-peter-mckay/), this is also no small accomplishment for the Chromebook line as a whole.
+
+Hence my new setup: I’m going to use a desktop machine running [Ubuntu](https://ubuntu.com/desktop), another popular Linux distro, as my daily workhorse machine. That is the really main replacement for my old laptop, a Dell XPS that came with Ubuntu pre-installed.
+
+But for times when I need productivity on the go, my remote option will be a Chromebook. I won’t really be relying on it as my primary computer, as a lot of people do. But I figure it will get the job done for email, word processing, browsing, et cetera.
+
+My only lingering qualm is the Chrome browser itself, which notoriously sucks up a lot of user data on Google’s behalf. To address that problem, I’m already exploring ways to install the privacy-focused [Brave browser](https://brave.com/) on my Chromebook as an alternative.
+
+This seems imminently doable given Linux’s flexibility. Will update you on how it goes from here.
+
+**Week In Review: June 9-15, 2024**
+
+*   **The Federal Reserve signaled** on Wednesday it will cut its official target for U.S. interest rates [just once](https://www.msn.com/en-ca/money/topstories/fomc-leaves-rates-alone-but-scales-back-2024-easing-outlook/ar-BB1o6MVo) this year, a more conservative approach than previously forecast. The central bank’s revised approach, which is tailored to further reduce inflation in America, effectively discourages riskier market bets. Thus [token prices fell](https://www.theblock.co/post/300129/bitcoin-equities-single-fed-rate-cut) following the Fed announcement, with bitcoin posting a 4% decline for the week.  
+
+*   **According to a new survey by the Bank for International Settlements**, 94% of central banks globally are considering offering their own digital currencies. But most are focused on offering the tokens to wholesalers, while enthusiasm for retail-level currencies for consumers is shakier. ([Decrypt](https://decrypt.co/235501/94-of-central-banks-considering-wholesale-cbdcs-says-bis))
+
+*   **Both U.S. presidential candidates are courting the pro-crypto vote.** Donald Trump, who called bitcoin a “scam” during his presidency, has now [flipped 180 degrees](https://www.nbcnews.com/politics/2024-election/donald-trump-flips-crypto-scam-building-crypto-army-rcna157171) on the issue. He met with miners in Florida and pledged afterward to reverse the current administration’s regulatory crackdown if elected to a new term this November. Meanwhile, Biden White House officials are expected to attend [an industry roundtable](https://www.theblock.co/post/300329/biden-admin-officials-mark-cuban-and-more-to-attend-crypto-roundtable-hosted-by-rep-ro-khanna-bitcoin-magazine) next month hosted by Silicon Valley congressman Ro Khanna and billionaire Mark Cuban.
+
+*   **Tether CEO Paolo Ardoino** said in an interview with Bloomberg that the stablecoin issuer expects to [invest more than $1 billion](https://www.coindesk.com/business/2024/06/11/tether-expects-to-invest-over-1b-in-deals-in-the-next-year-bloomberg/) over the next year in financial infrastructure, AI, and biotech.
+
+*   **Fidelity International joined JPMorgan’s private network** for tokenizing real-world assets. Fidelity has already used the platform to tokenize one of its money-market funds. ([Blockworks](https://blockworks.co/news/fidelity-international-joins-jpmorgan-tokenized-network))
+
+*   **Japanese investment firm Metaplanet disclosed** its third bitcoin purchase, bringing its total holdings of the token to $9.4 million. Metaplanet shares jumped almost 10% Tuesday on the news. ([CoinDesk](https://www.coindesk.com/business/2024/06/11/metaplanet-discloses-16m-btc-purchase-shares-jump-10/))   
+
+*   **The startup TipLink** is offering a new service to ease account setup for crypto newcomers. It allows them to set up an in-browser Solana wallet using their Google sign-in credentials, without installing a browser extension. ([CoinDesk](https://www.coindesk.com/business/2024/06/11/tiplink-aims-for-crypto-newcomers-with-google-powered-solana-wallet/))
 
 ### Odds & Ends
 
-- https://www.cnbc.com/2024/06/09/how-to-break-bad-money-habits-from-financial-psychologist.html
-- tk
-- tk
+*   **Tesla shareholders voted** to reinstate Elon Musk’s $56 billion pay package, which had previously been rescinded by a Delaware judge’s order. ([CNBC](https://www.cnbc.com/2024/06/13/tesla-shareholder-elon-musk-pay-package-at-annual-meeting.html))
+
+*   **Australia is using drones** and other technologies for early detection to combat a surge in shark attacks. Yay? ([Washington Post](https://www.washingtonpost.com/world/2024/06/13/shark-attack-prevention-drones-ai-australia/))
+
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
-<!-- Insert "about me" copy. -->
+_**To reach me directly with feedback, a story suggestion, or something else, email peter\[at\]w3w.media.**_
 
-_**To reach me directly with feedback, a story suggestion, or something else, email peter[at]w3w.media.**_
-
-_**Best wishes for a healthy and productive week ahead.**_ 😉
+_**Best wishes for a healthy and productive week ahead.**_ 
