Adding some possible summary items, etc.

--- a/2024/2024-07-07.md
+++ b/2024/2024-07-07.md
@@ -7,6 +7,11 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 <!-- Lede item. Should run ~450 words. -->
 
+I have good news. There are answers to everything that bothers us about the modern internet.
+
+But there's also bad news: None of those answers is easy.
+
+
 ### Week in Review: July 1-6, 2024
 
 - Amazon Web Services is locking up nuclear generation capacity in Pennsylvania to power AI servers. https://www.wsj.com/business/energy-oil/tech-industry-wants-to-lock-up-nuclear-power-for-ai-6cb75316?st=tc5yzhb6xnscy3f&reflink=desktopwebshare_permalink
