--- a/2024/2024-06-23.md
+++ b/2024/2024-06-23.md
@@ -2,6 +2,7 @@
 ## The ills of token speculation are frustrating, sure. But the history of the web1 bubble provides useful perspective and lessons for this new era.
 
 ![Closeup of a toteboard with numbers](https://miro.medium.com/v2/resize:fit:4800/format:webp/1*bw-7SoRedfN-qY2xuU_RLw.jpeg)
+*Photo by Nick Hillier via Unslpash*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
