--- a/2024/2024-07-14.md
+++ b/2024/2024-07-14.md
@@ -13,6 +13,6 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 ### Odds & Ends
 
-- tk
+- **"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
 
 <!-- Pickup boilerplate from last week -->
