--- a/2024/2024-07-07.md
+++ b/2024/2024-07-07.md
@@ -1,26 +1,58 @@
-# tktktk
-## tktktk
+# Who's the power hog now?
+## WSJ: Companies that make electricity-hungry AI apps are increasingly looking to nuclear generation as a solution.
 
-<!-- Art... -->
+![The Czech Republic's Dukovany Nuclear Power Station](https://images.unsplash.com/photo-1630142896875-d71a6ee6db03)
+*Photo by Lukáš Lehotský via Unsplash*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
 <!-- Lede item. Should run ~450 words. -->
 
-I have good news. There are answers to everything that bothers us about the modern internet.
+**The Wall Street Journal** ran a [fascinating AI story](https://www.wsj.com/business/energy-oil/tech-industry-wants-to-lock-up-nuclear-power-for-ai-6cb75316?st=i66zih6bogljhop&reflink=desktopwebshare_permalink) Monday addressing how exactly we're supposed to physically generate the copious electricity required for AI that is computationally ["generative"](https://www.ibm.com/topics/generative-ai) in a very different sense of that word.
 
-But there's also bad news: None of those answers is easy.
+Turns out Amazon Web Services and other tech companies are betting big on nuclear plants to handle the task. An eye-popping factoid from Journal reporters Jennifer Hiller and Sebastian Herrera illustrates the point:
 
+*The owners of roughly a third of U.S. nuclear-power plants are in talks with tech companies to provide electricity to new data centers needed to meet the demands of an artificial-intelligence boom.*
+
+**Why it matters:** When a user queries an AI app, it creates new content from scratch every time in order to answer, unlike search and social platforms that index and present previously existing information. Hence AI computers do much more processing -- and thus require much more electricity.
+
+Nuclear generation is attractive to AI companies because it is carbon-free and demonstrably more [reliable](https://www.energy.gov/ne/articles/nuclear-power-most-reliable-energy-source-and-its-not-even-close) and [scalable](https://climate.mit.edu/ask-mit/how-many-wind-turbines-would-it-take-equal-energy-output-one-typical-nuclear-reactor) than other "clean" power sources like solar, hydro, and wind. But it has historically been divisive in the U.S. ever since 1979's [Three Mile Island disaster](https://www.usatoday.com/story/news/politics/2019/09/20/three-mile-island-closes-meltdown-changed-nuclear-energy-america/2352254001/).
+
+A 2023 [survey](https://www.pewresearch.org/short-reads/2023/08/18/growing-share-of-americans-favor-more-nuclear-power/) by the Pew Research Center suggested Americans' attitudes toward nuclear power may be thawing lately. However, it still lags in popularity here behind other clean sources.
+
+As a blockchain aficionado, I would also add: I'm beyond curious to see how AI fares from a PR standpoint as talk about the technology's power hungriness proliferates. Bitcoin in particular has taken serious heat on this issue over the years, of course. Let's see if the public is any more forgiving of AI, or if its leaders can make a significantly better case. 😜
+
+Some other notable coverage of AI's electricity usage this year:
+
+- **In June,** Forbes' Alan Ohnsman also covered the industry's appetite for nuclear, as well as other solutions like new forms of battery storage. He cites a Goldman Sachs estimate that ChatGPT queries use nearly [10 times as much electricity](https://www.forbes.com/sites/alanohnsman/2024/06/10/desperate-for-power-ai-companies-look-to-the-nuclear-option/) as Google searches.
+
+- **In May, OpenAI CEO Sam Altman** took a nuclear generation company named Oklo [public on the New York Stock Exchange](https://www.cnbc.com/2024/05/10/sam-altman-takes-nuclear-startup-oklo-public-to-power-ai-ambitions.html) via a Special Purpose Acquisition Vehicle. That fundraising structure has generally [fallen out of favor](https://www.morningstar.com/markets/end-spac-experiment) on Wall Street the last few years, by the way. But hey... I guess a lot of people still maintain a separate set of rules for Altman. What could possibly go wrong?
+
+- **In February, the BBC visited an AI data center in Eugene, Ore.** An executive there told the news service such AI centers require more than [double the wattage](https://www.bbc.com/news/business-68238330) flowing into the building compared to conventional data centers, as well as quintuple the cabling. He believes it will become an industry norm at some point for AI centers to have on-site nuclear generation at some point.
+
+- **Microsoft is also looking into microreactors** as a way to boost its AI ambitions, according to a late-2023 [report](https://gizmodo.com/microsoft-hiring-nuclear-energy-expert-ai-1850873864) by Gizmodo.
+
+On to the latest headlines elsewhere...
 
 ### Week in Review: July 1-6, 2024
 
-- Amazon Web Services is locking up nuclear generation capacity in Pennsylvania to power AI servers. https://www.wsj.com/business/energy-oil/tech-industry-wants-to-lock-up-nuclear-power-for-ai-6cb75316?st=tc5yzhb6xnscy3f&reflink=desktopwebshare_permalink
+- **Crypto prices plunged** as the U.S. and German governments began [selling tokens](https://www.coindesk.com/markets/2024/07/04/bitcoin-nosedives-under-58k-amid-mt-gox-german-government-wallet-movements/), including some seized to repay victims of the notorious Mt. Gox hack [in 2014](https://en.wikipedia.org/wiki/Mt._Gox). The exchange's bankruptcy estate [confirmed](https://www.coindesk.com/business/2024/07/05/mt-gox-begins-repayments-in-bitcoin-and-bitcoin-cash/) Friday it has also begun sales to repay former customers. As of Sunday afternoon in New York, bitcoin suffered a 7-day decline of 8%, and ether was down 13%, according to [CoinMarketCap](https://coinmarketcap.com/) data.
 
-- Roaring Kitty updates: New class-action lawsuit alleging GME manipulation: https://decrypt.co/237799/lawsuit-gamestop-roaring-kitty-securities-fraud | He seems to be getting into Chewy now: https://www.wsj.com/finance/stocks/chewy-shares-soar-after-roaring-kitty-discloses-6-6-stake-48544805?st=dx5b4iughaasxg6&reflink=desktopwebshare_permalink
+- **The market plunge** has pushed the Cryto Fear & Greed Index, a contrarian measure of market sentiment, to its lowest reading in more than a year. ([CoinDesk](https://www.coindesk.com/markets/2024/07/05/crypto-crash-pushes-fear-greed-index-to-lowest-since-bitcoin-traded-at-17k-in-early-2023/))
+
+- **The Securities and Exchange Commission sued Consensys**, a major player in the Ethereum ecosystem, alleging the Brooklyn-based firm engaged in the sale of unregistered securities through its popular MetaMask wallet. ([CNBC](https://www.cnbc.com/2024/06/28/sec-sues-ethereum-company-consensys-expanding-industrywide-crackdown.html))
+
+- **According to a new report from Architect Partners,** the crypto sector [added $750 billion](https://architectpartners.com/wp-content/uploads/2024/07/Q2-2024-Crypto-MA-and-Financings-Report-1.pdf) in value in the first half of 2024, including appreciation in both token prices and listed shares of companies in the industry. That means crypto is recovering faster from its post-FTX lows than dotcom stocks did after they crashed in 2000, according to Architect. (One caveat: The report did not capture the token market's steep selloff to begin the year's *second* half so far. That undoubtedly would have tempered the picture somewhat.)
+
+- **An investor group dropped its class-action suit** against stock-market influencer Keith Gill alleging he engaged in a pump-and-dump scheme in GameStop shares. ([Forbes](https://fortune.com/2024/07/01/gamestop-stock-investor-lawsuit-dropped-keith-gill-roaring-kitty-pump-and-dump/))
+
+- **Telegram CEO Pavel Durov** says the popular crypto game Hamster Kombat is the "world's fastest-growing digital service." ([Decrypt](https://decrypt.co/238702/telegram-ceo-hamster-kombat-worlds-fastest-growing))
 
 ### Odds & Ends
 
-- **"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
+- **A 13,000-year-old tree in Southern California** may be threatened by construction of a nearby development that will include a business park, 1,700 homes, and an elementary school. Yikes. ([Washington Post](https://www.washingtonpost.com/climate-environment/2024/07/04/jurupa-oak-tree-development-california/))
+
+- **Do not attempt to work out like Lenny Kravitz.** So concluded Slate's Luke Winkie recently after conducting a highly [unscientific investigation](https://slate.com/life/2024/07/lenny-kravitz-2024-age-how-old-workout-video.html) involving not only an E-Z curl bar but also sunglasses and leather pants.
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
