--- a/2024/2024-07-07.md
+++ b/2024/2024-07-07.md
@@ -8,7 +8,7 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 <!-- Lede item. Should run ~450 words. -->
 
-**The Wall Street Journal** ran a [fascinating AI story](https://www.wsj.com/business/energy-oil/tech-industry-wants-to-lock-up-nuclear-power-for-ai-6cb75316?st=i66zih6bogljhop&reflink=desktopwebshare_permalink) Monday addressing how exactly we're supposed to physically generate the copious electricity required for AI that is computationally ["generative"](https://www.ibm.com/topics/generative-ai) in a very different sense of that word.
+**The Wall Street Journal** ran a [fascinating AI story](https://www.wsj.com/business/energy-oil/tech-industry-wants-to-lock-up-nuclear-power-for-ai-6cb75316?st=i66zih6bogljhop&reflink=desktopwebshare_permalink) Monday addressing how exactly we're supposed to physically generate the copious electricity required for AI applications.
 
 Turns out Amazon Web Services and other tech companies are betting big on nuclear plants to handle the task. An eye-popping factoid from Journal reporters Jennifer Hiller and Sebastian Herrera illustrates the point:
 
@@ -22,13 +22,13 @@ A 2023 [survey](https://www.pewresearch.org/short-reads/2023/08/18/growing-share
 
 As a blockchain aficionado, I would also add: I'm beyond curious to see how AI fares from a PR standpoint as talk about the technology's power hungriness proliferates. Bitcoin in particular has taken serious heat on this issue over the years, of course. Let's see if the public is any more forgiving of AI, or if its leaders can make a significantly better case. 😜
 
-Some other notable coverage of AI's electricity usage this year:
+Some other coverage of AI's electricity usage in recent months:
 
 - **In June,** Forbes' Alan Ohnsman also covered the industry's appetite for nuclear, as well as other solutions like new forms of battery storage. He cites a Goldman Sachs estimate that ChatGPT queries use nearly [10 times as much electricity](https://www.forbes.com/sites/alanohnsman/2024/06/10/desperate-for-power-ai-companies-look-to-the-nuclear-option/) as Google searches.
 
 - **In May, OpenAI CEO Sam Altman** took a nuclear generation company named Oklo [public on the New York Stock Exchange](https://www.cnbc.com/2024/05/10/sam-altman-takes-nuclear-startup-oklo-public-to-power-ai-ambitions.html) via a Special Purpose Acquisition Vehicle. That fundraising structure has generally [fallen out of favor](https://www.morningstar.com/markets/end-spac-experiment) on Wall Street the last few years, by the way. But hey... I guess a lot of people still maintain a separate set of rules for Altman. What could possibly go wrong?
 
-- **In February, the BBC visited an AI data center in Eugene, Ore.** An executive there told the news service such AI centers require more than [double the wattage](https://www.bbc.com/news/business-68238330) flowing into the building compared to conventional data centers, as well as quintuple the cabling. He believes it will become an industry norm at some point for AI centers to have on-site nuclear generation at some point.
+- **In February, the BBC visited an AI data center in Eugene, Ore.** An executive there told the news service such AI facilities require more than [double the wattage](https://www.bbc.com/news/business-68238330) flowing into the building compared to conventional data centers, as well as quintuple the cabling. He believes it will become an industry norm at some point for AI centers to have on-site nuclear generation at some point.
 
 - **Microsoft is also looking into microreactors** as a way to boost its AI ambitions, according to a late-2023 [report](https://gizmodo.com/microsoft-hiring-nuclear-energy-expert-ai-1850873864) by Gizmodo.
 
