--- a/2024/2024-07-07.md
+++ b/2024/2024-07-07.md
@@ -28,7 +28,7 @@ Some other coverage of AI's electricity usage in recent months:
 
 - **In May, OpenAI CEO Sam Altman** took a nuclear generation company named Oklo [public on the New York Stock Exchange](https://www.cnbc.com/2024/05/10/sam-altman-takes-nuclear-startup-oklo-public-to-power-ai-ambitions.html) via a Special Purpose Acquisition Vehicle. That fundraising structure has generally [fallen out of favor](https://www.morningstar.com/markets/end-spac-experiment) on Wall Street the last few years, by the way. But hey... I guess a lot of people still maintain a separate set of rules for Altman. What could possibly go wrong?
 
-- **In February, the BBC visited an AI data center in Eugene, Ore.** An executive there told the news service such AI facilities require more than [double the wattage](https://www.bbc.com/news/business-68238330) flowing into the building compared to conventional data centers, as well as quintuple the cabling. He believes it will become an industry norm at some point for AI centers to have on-site nuclear generation at some point.
+- **In February, the BBC visited an AI data center in Eugene, Ore.** An executive there told the news service such AI facilities require more than [double the wattage](https://www.bbc.com/news/business-68238330) flowing into the building compared to conventional data centers, as well as quintuple the cabling. He believes it will become an industry norm at some point for AI centers to have on-site nuclear generation.
 
 - **Microsoft is also looking into microreactors** as a way to boost its AI ambitions, according to a late-2023 [report](https://gizmodo.com/microsoft-hiring-nuclear-energy-expert-ai-1850873864) by Gizmodo.
 
@@ -38,7 +38,7 @@ On to the latest headlines elsewhere...
 
 - **Crypto prices plunged** as the U.S. and German governments began [selling tokens](https://www.coindesk.com/markets/2024/07/04/bitcoin-nosedives-under-58k-amid-mt-gox-german-government-wallet-movements/), including some seized to repay victims of the notorious Mt. Gox hack [in 2014](https://en.wikipedia.org/wiki/Mt._Gox). The exchange's bankruptcy estate [confirmed](https://www.coindesk.com/business/2024/07/05/mt-gox-begins-repayments-in-bitcoin-and-bitcoin-cash/) Friday it has also begun sales to repay former customers. As of Sunday afternoon in New York, bitcoin suffered a 7-day decline of 8%, and ether was down 13%, according to [CoinMarketCap](https://coinmarketcap.com/) data.
 
-- **The market plunge** has pushed the Cryto Fear & Greed Index, a contrarian measure of market sentiment, to its lowest reading in more than a year. ([CoinDesk](https://www.coindesk.com/markets/2024/07/05/crypto-crash-pushes-fear-greed-index-to-lowest-since-bitcoin-traded-at-17k-in-early-2023/))
+- **The market plunge** has pushed the Crypto Fear & Greed Index, a contrarian measure of market sentiment, to its lowest reading in more than a year. ([CoinDesk](https://www.coindesk.com/markets/2024/07/05/crypto-crash-pushes-fear-greed-index-to-lowest-since-bitcoin-traded-at-17k-in-early-2023/))
 
 - **The Securities and Exchange Commission sued Consensys**, a major player in the Ethereum ecosystem, alleging the Brooklyn-based firm engaged in the sale of unregistered securities through its popular MetaMask wallet. ([CNBC](https://www.cnbc.com/2024/06/28/sec-sues-ethereum-company-consensys-expanding-industrywide-crackdown.html))
 
