Updating July '24 drafts

--- a/2024/2024-07-14.md
+++ b/2024/2024-07-14.md
@@ -1,18 +1,42 @@
-# tktktk
-## tktktk
+# Cut the algos from your news diet.
+## It’s one of the best things we could all do to have better small-d democratic discourse. Here’s how I do it.
 
-<!-- Art... -->
+![Journalists taking notes](https://images.unsplash.com/photo-1503428593586-e225b39bddfe)
+*Photo by the Climate Reality Project via Unsplash*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-<!-- Lede item. Should run ~450 words. -->
+**When I consume news online these days,** I try to do so in channels with little or no algorithmic curation whenever possible.
 
-### Week in Review: July 7-13, 2024
+The main things I look for instead are feeds organized in [reverse chronological](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.) order and news sources edited and curated by (gasp!) actual humans. Tools that fit into these categories for me include:
+- **Email newsletters.** Our inboxes are perhaps the original example of reverse chronology, with everything organized simply by timestamp. Then, within each newsletter (like this one), you’re usually getting one actual person’s curated view of the world. If you get several different perspectives in this way, even better. Bingo.
+- **RSS.** Yes, this [old standby](https://rss.com/blog/how-do-rss-feeds-work/) from the early days of the blogosphere still works. My daily feed reader is [Feedly](https://feedly.com/), but there are several others out there you might choose. When you build your own subscription list in one of these things, that itself is a form of human curation.
+- **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos for me, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably don’t want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
+- **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps  for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters and editors, not robots trying to target you with ads.
+- **The Brave web browser.** I will give this one an honorable mention on the list because I find its [default privacy safeguards](https://brave.com/) protect me well against algorithmically targeted advertising in particular. That’s not exactly pertinent to the matter of prioritizing feeds of news headlines. But it is broadly related to the theme of breaking from the major platforms’ surveillance-driven business models.
 
-- tk
+So what do I cut out of my daily setup in order to make room for the above? Well, as you can probably guess, I’m generally spending less time on social media these days, and I specifically try not to use it as a news source. When I’m on social, I’m much more apt to post personal updates or maybe reply to a person I know offline who’s posted something that caught my eye. But social simply isn’t a primary news source for me anymore, because it’s clearly a pretty crappy at that particular job, precisely because it leans too heavily on algos.
 
-### Odds & Ends
+That said, I will admit my alternative solution is also imperfect in some ways. True math geeks might argue, for example, that reverse chronology is itself a sort of algorithm, albeit a much simpler one than the social platforms’ inscrutable black boxes for prioritizing our feeds.
 
-- **"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
+There’s also no single set of rules anyone could come up with that could possibly cover every single social platform out there, with all the different features and interfaces you might choose within each app, and so on. The possibilities are just too vast to cover so easily.
 
-<!-- Pickup boilerplate from last week -->
+Nevertheless, I find the approach I described above works pretty well for me, in general. And I’m motivated to share it because, frankly, the [awful political news in the U.S.](https://www.wsj.com/politics/elections/trump-taken-off-stage-after-apparent-shots-fired-at-rally-9d6680da?st=67c2iu2yhajek5q&reflink=desktopwebshare_permalink) this weekend is front of mind for me right now. Helping people become better news consumers is a constructive change we should talk about in its wake, I believe.
+
+On our Sunday political shows today, there was [a lot of talk](https://www.youtube.com/watch?v=HkBaKOW-OOo) about the need for politicians to “dial back” their rhetoric. It has undoubtedly grown very heated over the years and perhaps prone to encourage disturbed individuals to conduct attacks like the one against former President Trump on Saturday evening.
+
+I fully agree, our elected officials need to set a better tone. But I would add: Each of us, as news consumers, need to do our part as well to inoculate ourselves against all the rhetorical poison that circulates on the tech platforms, day by day.
+
+That way, even if some miscreant circulates hate or incitement online, its broader effect on society is limited. It can become like the proverbial tree that falls in the forest with no one around to hear it.
+
+Sure, it would be nice if the people running social platforms did the work to protect us from such stuff. But we should have learned from repeated [experience](https://www.npr.org/2021/10/05/1043377310/facebook-whistleblower-frances-haugen-congress) by now, that’s simply not going to happen. Not in the real world that we actually live in.
+
+We’re on our own in this regard. Act accordingly.
+
+_**That's it for now. Thanks for reading the newsletter today!**_
+
+_**About me: I'm a seasoned content pro focused on decentralization. I've published this newsletter for over seven years and was previously an award-winning markets reporter at the Wall Street Journal. For a fuller bio, please check out my [personal website](https://pmckay.com/).**_  <!-- Add bio, editorial policy, and links via w3w site later. -->
+
+_**To reach me directly with feedback, a story suggestion, or anything else, please email peter[at]w3w.media.**_
+
+_**Best wishes for a healthy and productive week ahead.**_ 😊
